--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -1,5 +1,35 @@
 <resources>
 
+    <!--Screen titles-->
+    <string name="wall_fragment_caption">The Wall</string>
+    <string name="video_chat_fragment_caption">Video Chat</string>
+    <string name="news_fragment_caption">News</string>
+    <string name="rumors_fragment_caption">Rumors</string>
+    <string name="shop_fragment_caption">Shop</string>
+    <string name="club_radio_caption">Club Radio</string>
+    <string name="club_tv_caption">Club TV</string>
+    <string name="fantasy_caption">Fantasy</string>
+    <string name="statistics_caption">Statistics</string>
+    <string name="chat_caption">Chat</string>
+    <string name="shop_caption">Shop</string>
+    <string name="rumours_caption">Rumours</string>
+    <string name="video_chat_caption">Video Chat</string>
+    <string name="wall_caption">The Wall</string>
+    <string name="news_caption">News</string>
+    <string name="quiz_caption">Quiz</string>
+
+    <string-array name="menu_navigation">
+        <item>@string/wall_caption</item>
+        <item>@string/chat_caption</item>
+        <item>@string/news_caption</item>
+        <item>@string/statistics_caption</item>
+        <item>@string/rumours_caption</item>
+        <item>@string/club_radio_caption</item>
+        <item>@string/shop_caption</item>
+        <item>@string/club_tv_caption</item>
+        <item>@string/video_chat_caption</item>
+    </string-array>
+
     <!-- Login & Register -->
     <string name="login_sign_up">Sign up</string>
     <string name="login_login">Login</string>
@@ -45,24 +75,6 @@
     <string name="dialog_internet_connection_failed">You need to be connected to the internet to do this</string>
     <string name="dialog_message_facebook_error">Your public profile could not be received. Please try again!</string>
 
-    <!--Screen titles-->
-    <string name="wall_fragment_caption">The Wall</string>
-    <string name="video_chat_fragment_caption">Video Chat</string>
-    <string name="news_fragment_caption">News</string>
-    <string name="rumors_fragment_caption">Rumors</string>
-    <string name="shop_fragment_caption">Shop</string>
-    <string name="club_radio_caption">Club Radio</string>
-    <string name="club_tv_caption">Club TV</string>
-    <string name="fantasy_caption">Fantasy</string>
-    <string name="statistics_caption">Statistics</string>
-    <string name="chat_caption">Chat</string>
-    <string name="shop_caption">Shop</string>
-    <string name="rumours_caption">Rumours</string>
-    <string name="video_chat_caption">Video Chat</string>
-    <string name="wall_caption">The Wall</string>
-    <string name="news_caption">News</string>
-    <string name="quiz_caption">Quiz</string>
-
     <string name="share_using">Share with:</string>
     <string name="enter_comment_hint">Enter your comment here…</string>
     <string name="member_info">Member info</string>
@@ -104,6 +116,23 @@
     <string name="time_info_player">%1$tM:%1$tS / %2$tM:%2$tS</string>
 
     <!--Chat-->
+    <string name="chat_join_group">Join Group</string>
+    <string name="chat_already_in_group">You are already in the chat.</string>
+    <string name="chat_members">Members</string>
+    <string name="chat_edit">Edit</string>
+    <string name="chat_Leave">Leave</string>
+    <string name="chat_send">SEND</string>
+    <string name="chat_image_downloaded">Image is downloaded.</string>
+    <string name="chat_video_downloaded">Video is downloaded.</string>
+    <string name="are_you_sure">ARE YOU SURE?</string>
+    <string name="chat_leave_chat">Leave this chat?</string>
+    <string name="chat_delete_chat">This will permanently delete this chat; are you sure?</string>
+    <string name="choose">Choose</string>
+    <string name="chat_image_or_video">Take photo or record video?</string>
+    <string name="chat_video">Video Chat</string>
+    <string name="chat_image">Image</string>
+    <string name="chat_hold">Hold down to record</string>
+    <string name="chat_recording_stop">Recording stopped</string>
     <string name="no_message_text">No one has started chatting yet! Why not be the first?</string>
     <string name="permission_microphone_rationale">Please enable microphone in order to send voice message.</string>
     <string name="permission_microphone_denied">You need to enable microphone in settings to send audio messages.</string>
@@ -140,6 +169,11 @@
     <string name="video_chat_button_text">Begin your call</string>
     <string name="starting_new_call_search_hint">Search public chats</string>
     <string name="starting_new_call_search_title">Starting New Call</string>
+    <string name="video_chat_maximum">Sorry, you can only video call with a maximum of 3 friends, and this call is already full!</string>
+    <string name="video_chat_you">You</string>
+    <string name="video_chat_receive_call">Receiving a call from</string>
+    <string name="video_chat_accept_call">Accept the call?</string>
+    <string name="video_chats">Video chats</string>
 
     <!--Next match view-->
     <string name="match_day">%1$d Day</string>
@@ -151,31 +185,9 @@
     <string name="match_sec">%1$d Sec</string>
     <string name="match_secs">%1$d Secs</string>
 
-    <string name="chat_join_group">Join Group</string>
-    <string name="chat_already_in_group">You are already in thi chat.</string>
-    <string name="chat_members">Members</string>
-    <string name="chat_edit">Edit</string>
-    <string name="chat_Leave">Leave</string>
-    <string name="chat_send">SEND</string>
-    <string name="chat_image_downloaded">Image is downloaded.</string>
-    <string name="chat_video_downloaded">Video is downloaded.</string>
-    <string name="are_you_sure">ARE YOU SURE?</string>
-    <string name="chat_leave_chat">Leave this chat?</string>
-    <string name="chat_delete_chat">This will permanently delete this chat; are you sure?</string>
-    <string name="choose">Choose</string>
-    <string name="chat_image_or_video">Take photo or record video?</string>
-    <string name="chat_video">Video Chat</string>
-    <string name="chat_image">Image</string>
-    <string name="chat_hold">Hold down to record</string>
-    <string name="chat_recording_stop">Recording stopped</string>
-
     <string name="news_install_twitter">Please install Twitter application.</string>
     <string name="news_post_to_wall_title">Post this to your wall?</string>
     <string name="news_post_to_wall_message">Would you like to post this on your wall?</string>
-    <string name="video_chat_maximum">Sorry you can only video call with a maximum of 3 friends, and this call is already full!</string>
-    <string name="video_chat_you">You</string>
-    <string name="video_chat_receive_call">Receiving a call from</string>
-    <string name="video_chat_accept_call">Accept the call?</string>
     <string name="permissions">Permissions</string>
     <string name="wall_new_post_subtitle">A subtitle…</string>
     <string name="wall_text_for_post">Write your post here.</string>
@@ -205,7 +217,6 @@
     <string name="wall_posts">Wall posts</string>
     <string name="videos_watched">Videos watched</string>
     <string name="chats">Chats</string>
-    <string name="video_chats">Video chats</string>
     <string name="public_chats">Public chats</string>
     <string name="matches_attended_home">Matches attended (home)</string>
     <string name="matches_attended_away">Matches attended (away)</string>
@@ -266,22 +277,6 @@
     <string name="waiting_for_active_internet_connection">Waiting for active internet connection…</string>
     <string name="no_connection_title">No Connection</string>
     <string name="no_connection_message">You need to be connected to the internet to do this</string>
-
-    <integer name="progress_bar_max">100</integer>
-    <integer name="progress_bar_60">65</integer>
-    <integer name="progress_bar_mid">50</integer>
-
-    <string-array name="menu_navigation">
-        <item>@string/wall_caption</item>
-        <item>@string/chat_caption</item>
-        <item>@string/news_caption</item>
-        <item>@string/statistics_caption</item>
-        <item>@string/rumours_caption</item>
-        <item>@string/club_radio_caption</item>
-        <item>@string/shop_caption</item>
-        <item>@string/club_tv_caption</item>
-        <item>@string/video_chat_caption</item>
-    </string-array>
 
     <string name="go_to_profile">Go to Profile ></string>
     <string name="find">Find</string>
