remove unused strings

--- a/SportsSideKick/app/src/main/res/values-de/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-de/strings.xml
@@ -45,7 +45,7 @@
     <string name="rumours_caption">Gerüchte</string>
     <string name="video_chat_caption">Video-Chat</string>
     <string name="wall_caption">Pinnwand</string>
-    <string name="news_caption">News</string>
+    <string name="news">News</string>
     <string name="quiz_caption">Quiz</string>
     <string name="coins_caption">DU HAST</string>
 
