--- a/SportsSideKick/app/src/main/res/values-bh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-bh/strings.xml
@@ -71,7 +71,7 @@
     <string name="rumours_caption">Rumours</string>
     <string name="video_chat_caption">Video Chat</string>
     <string name="wall_caption">The Wall</string>
-    <string name="news_caption">News</string>
+    <string name="news">News</string>
     <string name="quiz_caption">Quiz</string>
 
     <string name="coins_caption">YOU HAVE</string>
@@ -300,7 +300,7 @@
     <string-array name="menu_navigation">
         <item>@string/wall_caption</item>
         <item>@string/chat_caption</item>
-        <item>@string/news_caption</item>
+        <item>@string/news</item>
         <item>@string/statistics_caption</item>
         <item>@string/rumours_caption</item>
         <item>@string/club_radio_caption</item>
@@ -407,7 +407,6 @@
     <string name="enable_wall_notifications">Enable wall notifications</string>
     <string name="disable_wall_notifications">Disable wall notifications</string>
     <string name="search">Search</string>
-    <string name="news">NEWS</string>
     <string name="pin_count_placeholder" translatable="false">--</string>
     <string name="next_match">Next match</string>
     <string name="ellipsis" translatable="false">…</string>
