--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -47,7 +47,7 @@
     <string name="rumours_caption">Rumours</string>
     <string name="video_chat_caption">Video Chat</string>
     <string name="wall_caption">The Wall</string>
-    <string name="news_caption">News</string>
+    <string name="news">News</string>
     <string name="quiz_caption">Quiz</string>
     <string name="coins_caption">YOU HAVE</string>
 
